--- a/wiebenik.html
+++ b/wiebenik.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="css/wiebenik.css">
+    </head>
     <body>
         
     </body>
