--- a/wiebenik.html
+++ b/wiebenik.html
@@ -8,7 +8,7 @@
      <h1>Portfolio Merijn Dreef</h1>
         <p><img src="images/wiebenik.jpg"></p>
             
-        <p>Goededag, mijn naam is Merijn Dreef. In deze portfolio ga ik wat vertellen over mijzelf.</p>
+       <div class="a"> <p>Goededag, mijn naam is Merijn Dreef. In deze portfolio ga ik wat vertellen over mijzelf.</p>
                 <p>Mijn naam is Merijn Dreef, ik ben 17 jaar oud en ik ben nu bezig met de studie van applicatie en media ontwikkelaar op het Da vinci in Dordrecht.
                 Ik koos voor applicatie en media ontwikkelaar, omdat ik de andere opledingen waaronder Retail niet echt leuk vond, doordat applicatie en media ontwikkelaar 
                 mijn aandacht trok door open dagen bij het Da vinci college op het Leerpark in Dordrecht, 
@@ -26,7 +26,7 @@
                 <p>Wat wil ik verbeteren?</p>
                 
                 <p>Ik wil graag beter kunnen coderen en dat kan met deze opleiding en hulp van klasgenoten en docenten.</p>
-
+                </div>
                 <p>Wilt u weten over mijn bijbaantjes? Click dan op de link hieronder.</p>
                 <p><a href="bijbaan.html"> Dit is de link voor de informatie over mijn bijbaantjes</a></p>
 
