--- a/Bijbaan.html
+++ b/Bijbaan.html
@@ -15,7 +15,7 @@
                 <p>De leiding gevende zijn ook aardig en leuk om mee te werken.</p>
                 <p>Op de opleiding waar ik nu zit zie ik soms wat collega's en met hun kan ik soms een praatje maken.</p>
                 </div>
-                
+                <p><a href="https://www.plus.nl/supermarkten/dordrecht_plus-t-lam-dubbeldam_337?gclid=CjwKCAjw8ZHsBRA6EiwA7hw_sSCtQ_sEWhyLZCfThGmbPFIW7mLHfO0VcwEl_RTAt7YKHVitdkI5-hoC62MQAvD_BwE">Deze link brengt u naar de website van Plus t'Lam</a></p>
                 <p><a href="wiebenik.html">Deze link brengt u terug naar de vorige pagina</a></p>
         </body>
 </html>
